nuke-from-orbit/kubernetes-config/locust-exporter-controller.yaml
apiVersion: apps/v1
kind: "Deployment"
metadata:
  name: le-pod
  labels:
    name: le-pod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: le-pod
  template:
    metadata:
      labels:
        app: le-pod
    spec:
      containers:
        - name: le-pod
          image: containersol/locust_exporter:v0.3.0
          ports:
            - name: loc-exporter-web
              containerPort: 9646
              protocol: TCP
