nuke-from-orbit/kubernetes-config/locust-master-controller.yaml
apiVersion: apps/v1
kind: "Deployment"
metadata:
  name: lm-pod
  labels:
    name: lm-pod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: lm-pod
  template:
    metadata:
      labels:
        app: lm-pod
    spec:
      containers:
        - name: lm-pod
          image: gcr.io/[PROJECT_ID]/locust-tasks:latest
          resources:
            requests:
              memory: "500Mi"
              cpu: "50m"
            limits:
              memory: "1Gi"
              cpu: "100m"
          ports:
            - name: loc-master-web
              containerPort: 8089
              protocol: TCP
            - name: loc-master-p1
              containerPort: 5557
              protocol: TCP
            - name: loc-master-p2
              containerPort: 5558
              protocol: TCP
