nuke-from-orbit/kubernetes-config/locust-worker-controller.yaml
apiVersion: apps/v1
kind: "Deployment"
metadata:
  name: lw-pod
  labels:
    name: lw-pod
spec:
  replicas: 5
  selector:
    matchLabels:
      app: lw-pod
  template:
    metadata:
      labels:
        app: lw-pod
    spec:
      containers:
        - name: lw-prod
          image: gcr.io/[PROJECT_ID]/locust-tasks:latest
          resources:
            requests:
              memory: "2Gi"
              cpu: "1"
            limits:
              memory: "4Gi"
              cpu: "2"
