nuke-from-orbit/kubernetes-config/cloudwatch-controller.yaml
kind: Service
apiVersion: v1
metadata:
  annotations:
  name: cloudwatch-pod
  labels:
    app: cloudwatch-pod
spec:
  ports:
    - port: 9106
      targetPort: cw-web
      protocol: TCP
      name: cw-web
  selector:
    app: cloudwatch-pod
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cloudwatch-pod
  labels:
    name: cloudwatch-pod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cloudwatch-pod
  template:
    metadata:
      labels:
        app: cloudwatch-pod
    spec:
      containers:
        - name: cloudwatch-pod
          image: prom/cloudwatch-exporter:cloudwatch_exporter-0.8.0
          ports:
            - name: cw-web
              containerPort: 9106
              protocol: TCP
          volumeMounts:
            - name: cloudwatch-config-volume
              mountPath: /config/
      volumes:
        - name: cloudwatch-config-volume
          configMap:
            defaultMode: 420
            name: cloudwatch-conf
