nuke-from-orbit/kubernetes-config/grafana-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: grafana
  labels:
    app: grafana
spec:
  ports:
    - port: 3000
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: grafana
  type: LoadBalancer
