nuke-from-orbit/kubernetes-config/locust-controller.yaml
kind: Service
apiVersion: v1
metadata:
  name: lm-pod
  labels:
    app: lm-pod
spec:
  ports:
    - port: 8089
      targetPort: loc-master-web
      protocol: TCP
      name: loc-master-web
    - port: 5557
      targetPort: loc-master-p1
      protocol: TCP
      name: loc-master-p1
    - port: 5558
      targetPort: loc-master-p2
      protocol: TCP
      name: loc-master-p2
  selector:
    app: lm-pod
  type: LoadBalancer
---
apiVersion: apps/v1
kind: "Deployment"
metadata:
  name: lm-pod
  labels:
    name: lm-pod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: lm-pod
  template:
    metadata:
      labels:
        app: lm-pod
    spec:
      containers:
        - name: lm-pod
          image: gcr.io/[PROJECT_ID]/locust-tasks:latest
          resources:
            requests:
              memory: "500Mi"
              cpu: "50m"
            limits:
              memory: "1Gi"
              cpu: "100m"
          ports:
            - name: loc-master-web
              containerPort: 8089
              protocol: TCP
            - name: loc-master-p1
              containerPort: 5557
              protocol: TCP
            - name: loc-master-p2
              containerPort: 5558
              protocol: TCP
---
apiVersion: apps/v1
kind: "Deployment"
metadata:
  name: lw-pod
  labels:
    name: lw-pod
spec:
  replicas: 5
  selector:
    matchLabels:
      app: lw-pod
  template:
    metadata:
      labels:
        app: lw-pod
    spec:
      containers:
        - name: lw-prod
          image: gcr.io/[PROJECT_ID]/locust-tasks:latest
          resources:
            requests:
              memory: "2Gi"
              cpu: "1"
            limits:
              memory: "4Gi"
              cpu: "2"
---
kind: Service
apiVersion: v1
metadata:
  name: le-pod
  labels:
    app: le-pod
spec:
  ports:
    - port: 9646
      targetPort: lexp-web
      protocol: TCP
  selector:
    app: le-pod
  type: NodePort
---
apiVersion: apps/v1
kind: "Deployment"
metadata:
  name: le-pod
  labels:
    name: le-pod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: le-pod
  template:
    metadata:
      labels:
        app: le-pod
    spec:
      containers:
        - name: le-pod
          image: containersol/locust_exporter:v0.3.0
          ports:
            - name: lexp-web
              containerPort: 9646
              protocol: TCP
