nuke-from-orbit/kubernetes-config/locust-exporter-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: le-pod
  labels: 
    app: le-pod
spec:
  ports:
    - port: 9646
      targetPort: lexp-web
      protocol: TCP
selector:
  app: le-pod
type: NodePort
