nuke-from-orbit/kubernetes-config/loadtest-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: my-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: loadtest-address
    networking.gke.io/managed-certificates: loadtest-cert 
spec:
  rules:
  - http:
      paths:
      - path: /*
        backend:
          serviceName: lm-pod
          servicePort: 8089
      - path: /dashboard
        backend:
          serviceName: grafana
          servicePort: 3000
      - path: /prometheus
        backend:
          serviceName: prom-pod
          servicePort: 9090
